# csvToJson

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  configure
data/: test.csv
src/: csvToJSON.c  csvToJSON.h  csvToJSON_lib.c  test_csvToJSON.c
